throw -> try catch update